# algorithm-trading

./: Cargo.toml  README.md
src/: analyzer.rs  historical.rs  lib.rs  main.rs
tests/: integration_tests.rs  mock_tests.rs
