[package]
name = "algorithms-trading"
version = "0.1.0"
edition = "2021"

[lib]
name = "algorithms_trading"
path = "src/lib.rs"

[[bin]]
name = "streaming-client"
path = "src/main.rs"

[[bin]]
name = "data-analyzer"
path = "src/analyzer.rs"

[[bin]]
name = "historical-data"
path = "src/historical.rs"

[dependencies]
alpaca-trading-api-rust = { git = "https://bitbucket.org/blueskywalker/alpaca-trading-api-rust.git" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"
